--- a/Nguyen Manh Duc - HW1/codepen.io.html
+++ b/Nguyen Manh Duc - HW1/codepen.io.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
 </head>
+
 <body>
-    console.log('Di cong vien');
+    <script src="Homework1.js"> </script>
 </body>
+
 </html>
