--- a/Nguyen Manh Duc - HW8/index.html
+++ b/Nguyen Manh Duc - HW8/index.html
@@ -36,6 +36,8 @@
         <input id="task" type="text" placeholder="Enter task">
         <input id="myTime" type="number" placeholder="Time spent">
         <button id="add">Add</button>
+        <button id="clear">Clear</button>
+
     </div>
 
     <br>
@@ -45,8 +47,10 @@
             <th>Project</th>
             <th>Task</th>
             <th>Time spent</th>
+            <th colspan="2">Actions</th>
         </thead>
         <tbody id="niceBody">
+
         </tbody>
     </table>
 
