--- a/Nguyen Manh Duc - HW8/index.html
+++ b/Nguyen Manh Duc - HW8/index.html
@@ -36,6 +36,7 @@
         <input id="task" type="text" placeholder="Enter task">
         <input id="myTime" type="number" placeholder="Time spent">
         <button id="add">Add</button>
+        <button id="myUpdate">Update</button>
         <button id="clear">Clear</button>
 
     </div>
