--- a/Nguyen Manh Duc - HW9/hw9.html
+++ b/Nguyen Manh Duc - HW9/hw9.html
@@ -6,10 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #b7 {
+            font-size: 25px;
+        }
+        
+        .item {
+            margin-left: 10px;
+            font-size: 18px;
+        }
+    </style>
 </head>
+
 
 <body>
     <p id="b1"></p>
+
+    <b><p id="b7"></p></b>
+    <p id="b7b"></p>
+
+    <input id="new" type="text" placeholder="Enter new wish here">
+    <button id="submit">Add new</button>
+    <div id="display"></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+
     <script src="hw9.js"></script>
 </body>
 
