--- a/Nguyen-Manh-Duc-Project/ManageStock.html
+++ b/Nguyen-Manh-Duc-Project/ManageStock.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <input type="submit" value="Return" onclick="window.history.back()">
+    <input type="submit" value="Log out" onclick="location.replace('index.html')">
 
     <h2>Stock Manager</h2>
     <div id="ScreenForStock">
