--- a/Nguyen-Manh-Duc-Project/index.html
+++ b/Nguyen-Manh-Duc-Project/index.html
@@ -19,9 +19,9 @@
             <div id="login-form">
                 <div>
                     <label for="username">Username:</label>
-                    <input type="text" id="username">
+                    <input type="text" class="username">
                     <label for="pass">Password:</label>
-                    <input type="password" id="pass">
+                    <input type="password" class="pass">
                     <input type="checkbox" value="lsRememberMe" id="rememberMe">
                     <label for="rememberMe">Remember me</label>
                     <a href="ForgotPass.html">You forgot your password?</a>
@@ -29,16 +29,16 @@
                         <input type="submit" value="Sign Up" id="SignUp">
                         <input type="submit" value="Login" id="login">
                     </div>
-                    <h3><em><b>Copyright © 2021 by ImmenseHorse & Co.</b></em></h3>
+                    <h3><em><b> Copyright © 2021 by ImmenseHorse & Co.</b></em></h3>
                 </div>
 
             </div>
-            <div id="register">
+            <div class="register">
                 <div>
                     <label for="username">Username:</label>
-                    <input type="text" id="username">
+                    <input type="text" class="username">
                     <label for="pass">Password:</label>
-                    <input type="password" id="pass">
+                    <input type="password" class="pass">
                     <label for="passagain">Re-enter your pasword</label>
                     <input type="password" id="passagain">
                     <label for="email">Email:</label>
@@ -58,7 +58,7 @@
                     </div>
                     <div class="buttonLogIn">
                         <input type="submit" value="Return" id="SignIn">
-                        <input type="submit" value="Sign Up" id="Register">
+                        <input type="submit" value="Sign Up" class="register">
                     </div>
                 </div>
             </div>
@@ -83,6 +83,7 @@
     <footer>
 
     </footer>
+    <script src="js/TestData.js"></script>
     <script src="js/FetchLogInData.js"></script>
     <script src="js/ShowDesiredUI.js"></script>
 
