--- a/Nguyen-Manh-Duc-Project/ManageEmployees.html
+++ b/Nguyen-Manh-Duc-Project/ManageEmployees.html
@@ -11,7 +11,6 @@
 
 <body>
     <h1>Employees' Manager</h1>
-    <input type="submit" value="Return" onclick="window.history.back()">
-</body>
+    <input type="submit" value="Log out" onclick="location.replace('index.html')"></body>
 
 </html>
