--- a/Nguyen-Manh-Duc-Project/ManageStock.html
+++ b/Nguyen-Manh-Duc-Project/ManageStock.html
@@ -16,6 +16,7 @@
     <div id="ScreenForStock">
         <div>
             <div>
+                <input id="ID" type="text">
                 <input id="Name" type="text">
                 <input id="Grade" type="text">
                 <input id="Origin" type="text">
@@ -34,7 +35,7 @@
 
             <table id="tableStock">
                 <thead>
-                    <th>ID</th>
+                    <th>Barcode</th>
                     <th>Name</th>
                     <th>Grade</th>
                     <th>Origin</th>
